# sdl3_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-mingw.cmake
